Fix [skiplinks] Pb de z-index corrigé

--- a/framework/scss/components/_header.scss
+++ b/framework/scss/components/_header.scss
@@ -34,6 +34,7 @@
     padding: $ds44-padding-medium $ds44-padding-box;
     transition: box-shadow $ds44-timing-standard ease;
     background: #fff;
+    z-index: 10;
 
     &:focus {
         top: 0;
